# irc

./: .gitignore  CMakeLists.txt  Makefile
server/includes/: Channel.hpp  IRCserver.hpp  IRCserverInterface.hpp  Message.hpp  User.hpp
server/srcs/: Channel.cpp  IRCserver.cpp  IRCserverInterface.cpp  Message.cpp  User.cpp  main.cpp
